# KiotaMovies/MovieClient/Models/GetMovieByIdResponse.cs
@@ -1,0 +1,42 @@
+// <auto-generated/>
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System.Linq;
+using System;
+namespace KiotaMovies.Client.Models {
+    public class GetMovieByIdResponse : IParsable {
+        /// <summary>The movieDto property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public KiotaMovies.Client.Models.MovieDto? MovieDto { get; set; }
+#nullable restore
+#else
+        public KiotaMovies.Client.Models.MovieDto MovieDto { get; set; }
+#endif
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static GetMovieByIdResponse CreateFromDiscriminatorValue(IParseNode parseNode) {
+            _ = parseNode ?? throw new ArgumentNullException(nameof(parseNode));
+            return new GetMovieByIdResponse();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers() {
+            return new Dictionary<string, Action<IParseNode>> {
+                {"movieDto", n => { MovieDto = n.GetObjectValue<KiotaMovies.Client.Models.MovieDto>(KiotaMovies.Client.Models.MovieDto.CreateFromDiscriminatorValue); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer) {
+            _ = writer ?? throw new ArgumentNullException(nameof(writer));
+            writer.WriteObjectValue<KiotaMovies.Client.Models.MovieDto>("movieDto", MovieDto);
+        }
+    }
+}
